# fitols

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  savethat.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
fitols/: __init__.py  __main__.py
tests/: __init__.py  test_fit_ols.py
